--- a/Back-End/FinancasPessoais/FinancasPessoais/APIFinancas.csproj
+++ b/Back-End/FinancasPessoais/FinancasPessoais/APIFinancas.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -13,6 +13,10 @@
 
   <ItemGroup>
     <Folder Include="Controllers\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Infra.IOC\Infra.IOC.csproj" />
   </ItemGroup>
 
 </Project>
