--- a/Back-End/WebApi/Dockerfile
+++ b/Back-End/WebApi/Dockerfile
@@ -1,5 +1,4 @@
-
-FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS base
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 COPY ["WebApi/WebApi.csproj", "WebApi/"]
